syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message ListFlowSetsRequest {
	OpFlowSet flow_set = 1;
}

message ListFlowSetsResponse {
	repeated FlowSet flow_sets = 1;
}
